SILGen: Implement missing function conversions from tuples to Any

Fixes <https://bugs.swift.org/browse/SR-3267> and
<rdar://problem/22465834>.